# mal_win

./: .flake8  .gitignore  BUILD_STATUS.md  COMPILE.md  Dockerfile.windows  Dockerfile.windows-cross  Dockerfile.windows-pyinstaller  INSTALL.md  Makefile  Makefile.test  Makefile.test.c  Makefile.win  Makefile.win.cpp  README.md  build.sh  build_windows_cross.sh  build_windows_exe.sh  cc_client.c  command_monitor.c  commands.json  hansen-tcap.py  lint_c.sh  lint_report.txt  obfuscate.py  pyproject.toml  remote_command_executor.cpp  server_new.py  start_server.sh  string_obfuscation_demo.py  test_remote_executor.cpp  transfer_binary_direct.sh
.github/workflows/: ci.yml  test.yml
hansen_tcap/: __init__.py
tests/: README.md  __init__.py  conftest.py
